# Secondary-Electron-Model

./: .gitignore  LICENSE  README.md  fpm.toml  pyproject.toml
semodel/: scipy_special.i90
semodel/furman_pivi/: __init__.py  furman_pivi.py
src/: Secondary-Electron-Model.f90  semodel.i90  special_functions.i90  stdlib_specialfunctions_gamma.i90  stdlib_specialfunctions_gamma_dp.i90
src/semodel/: constants.i90  random_distributions.i90  semodel.f90  semodel.i90  semodel_base.f90  special_functions.f90  special_functions.i90
src/semodel/furman_pivi/: default_parameters.f90  furman_pivi.f90  semodel.f90
src/semodel/maxwell/: maxwell.f90
src/semodel/utils/: constants.f90  random_distributions.f90  special_functions.f90  vector_utils.f90
src/semodel/wrappers/: cephes.f90  cephes.i90  gammaCHI.i90  gammaCHI_wrapper.i90  scipy_special.f90  scipy_special.i90
